# csc490

lab0/: Makefile  ellipse.h  face.h  main.cpp  out.ppm
lab1/: a.out  ellipse.h  main.cpp  out.ppm
lab2/: dataProj  demogData.cpp  demogData.h  demogState.h  main.cpp  parse.cpp  testStates
lab3/: dataProj  demogState.h  main.cpp  out.ppm  out.txt  raceAndEthnicity.h  rect.h  testMax  testStates
lab5/: a.out  ellipse.h  main.cpp  out.ppm  polygon.cpp  polygon.h  ppmR.h  rect.h  shape.h
lab6/: Makefile  dataAQ.cpp  dataAQ.h  dataProj  demogState.h  ellipse.h  main.cpp  ok.out  out.ppm  out.txt  parse.cpp  psCombo.h  raceAndEthnicity.h  rect.h  testBelowPSort  testOneState.cpp  testPSSort  testPSState
lab7/: CMakeCache.txt  Makefile  dataAQ.cpp  dataAQ.h  demogState.cpp  fatal-police-shootings-data-Q.csv  psData.h  rundemo.cpp
lab8/: CMakeLists.txt  Makefile  demogData.cpp  parse.cpp  psCombo.h  rundemo.cpp  states.h
p1/: county_demographics2014.csv  dataAQ.cpp  dataAQ.h  dataProj  demogData.h  demogState.cpp  demogState.h  main.cpp  out.txt  parse.cpp  raceAndEthnicity.h  tddFuncs.cpp  tddFuncs.h  testStates  testStates.cpp
p2/: dataAQ.cpp  dataAQ.h  dataProj  demogData.cpp  demogData.h  demogState.cpp  main.cpp  out.ppm  out.txt  parse.cpp  psCombo.cpp  psCombo.h  psData.h  raceAndEthnicity.h  raceDemogData.cpp  testBelowPSort  testPSSort  testPSState  testPSState.cpp  testStates.cpp
p2beta/: PDNA-PSNA.ppm  PDW-PSW.ppm  dataAQ.cpp  dataAQ.h  dataProj  main.cpp  out.ppm  out.txt  psCombo.cpp  raceAndEthnicity.h  raceDemogData.h  testBelowPSort  testPSSort  (+3 more)
(+81 files in other folders)
